--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.30.0",
     "firebase": "^9.12.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
@@ -15,6 +18,9 @@
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
+    "semantic-ui-react": "^2.1.5",
+    "styled-components": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
